--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -94,14 +94,18 @@
         /* display: flex; */
         /* justify-content: center; */
         right: 0;
-        top: 2px;        
-        width: 20px;
-        height: 20px;
+        top: 3px;        
+        width: 24px;
+        height: 24px;
         /* border: 2px solid #000; */
         /* border-top: 2px solid transparent; */
         /* border-right: 2px solid transparent; */
         /* transform: rotate(-45deg); */
         transition: all 0.3s ease 0s;
+    }
+    .menu__filter .arrow-icon svg{
+        height: 100%;
+        width: 100%;
     }
 
     .menu__filter._filter-active .arrow-icon{
@@ -112,7 +116,7 @@
         /* left: 50px; */
         /* margin: auto 0; */
         /* margin-right: 32px; */
-        font-size: 25px;
+        font-size: 20px;
         /* font-weight: 700; */
     }
 
@@ -196,7 +200,9 @@
         /* @include text_hover; */
     }   
    
-
+    .filter__navigation .filter__navigation-list span{
+        display: none;
+    }
 
 
 
