--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -89,7 +89,8 @@ $text-color: #000;
         background-color: transparent;
     }
     &:hover{
-        background-color: #c2c2c2;
+        background-color: #1a1a1a;
+        color: #F2F2F2;
         transition: all .5s ease;
     }
     &:active{
@@ -269,6 +270,7 @@ body._lock{
             }
             .page__projects{
                 .section-wrapper{
+                    
                     // @include section;
                     .project__wrapper{
                         display: flex;
@@ -278,7 +280,7 @@ body._lock{
                         // grid-template-columns: repeat(auto-fit, minmax(528px, 1fr));
                         // gap: 28px;
                         margin: 0 -14px;                        
-                        margin-bottom: 28px;                        
+                        // margin-bottom: 28px;                        
                         padding-top: 5px;
                         .project__content{
                             display: flex;
@@ -347,10 +349,10 @@ body._lock{
                                 }
     
                                 .project__text{
-                                    font-size: $fz12;
+                                    font-size: $fz14;
                                     font-weight: 300;
                                     width: fit-content;
-                                    text-transform: uppercase;
+                                    // text-transform: uppercase;
                                     cursor: pointer;
                                     margin-top: rem(14);
                                     @include text_hover;                                
@@ -652,5 +654,47 @@ body._lock{
         text-align: center;
     }
     
+}
+
+.section__title{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding-bottom: 12px;
+    .title{
+        font-size: 24px;
+        // font-weight: 700;
+        
+    }
+    .icon{
+        display: flex;
+        align-items: center;
+        .title__more-btn{
+            // margin-left: 20px;
+            font-size: 20px;
+            text-decoration: none;
+            color: #575757;
+            border-bottom: transparent solid 1px;
+            transition: all .5s ease;
+            
+    
+            &:hover{
+                color: #131313;
+                font-weight: 500;
+                border-bottom: #474747 solid 1px;
+                transition: all .3s ease;
+            }
+        }
+        svg{
+            margin-left: 8px;
+            width: 20px;
+            height: 16px;
+            transform: rotate(-90deg);
+            fill: #727272;
+            cursor: pointer;
+            
+        }
+        
+    }
 }
 
