--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -159,7 +159,6 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
     width: fit-content;
     // text-transform: uppercase;
     // cursor: pointer;
-    margin-top: rem(14);
     @include text_hover; 
     
 }
@@ -359,6 +358,11 @@ body._lock{
                                     visibility: hidden;
                                 }
     
+                                .project__text{
+                                    margin-top: rem(14);
+                                }
+
+                                
                                 // .project__text{
                                 //     font-size: $fz14;
                                 //     font-weight: 300;
