Redirect from main page to other by clicking in nav bar. Fixed small bugs

--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -125,7 +125,7 @@
     }
 
     .page__main .page__content {
-        padding-top: 0;
+        /* padding-top: 112px; */
     }
     .filter__navigation{
         /* position: relative; */
