--- a/assets/style/normalize.css
+++ b/assets/style/normalize.css
@@ -224,7 +224,8 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button;
+    -webkit-appearance: none;
+    /* -webkit-appearance: button; */
 }
 
 /**
