--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -163,7 +163,10 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
     
 }
 
- 
+// button{
+//     -webkit-appearance: none;
+//     border-radius: none;
+// }
 
 
 
