--- a/each-projects-page/nszu/nszu-style.scss
+++ b/each-projects-page/nszu/nszu-style.scss
@@ -42,163 +42,156 @@
 
             // New style code
 
+.section-wrapper  {
+    padding: 0;
+}
 
-.slider{
-    position: relative;
-    overflow: hidden;
-    .slider__line{
-        display: flex;
-        
-        .photo-bg{
-            max-width: 1640px;
-            height: 832px;
-            .img-bg{
-                width: 1640px;
-                // background-color: rgb(170, 170, 170);
-                display: flex;
-                justify-content: center;
-                img{
-                    // height: auto;
-                    // margin: 0 auto;
-                    max-height: 832px;
+.image-slider{
+}
 
-                } 
+.image-slider__wrapper{
 
-                .photo-text{
-                    display: flex;
-                    color: #222222;
-                    // justify-content: space-between;
-                    .photo-text-left{
-                        max-width: 1170px;
-                        margin-right: 120px;
-                    }
-                    .photo-text-right{
-                        // width: 50%;
-                    }
-                    .title{
-                        font-size: $fz18;
-                        font-weight: 700;
-                        padding: 10px 0 10px 0;
-                    }
-                    .text{
-                        // font-size: $fz16;
-                        li::before{
-                            content: "";
-                            height: 5px;
-                            width: 5px;
-                            background-color: rgb(73, 73, 73);
-                            border-radius: 50%;
-                            display: inline-block;
-                            margin-right: 4px;
-                            
-                        }
+}
 
-                    }
-                }
-            }           
-        }
-    }
+.image-slider__slide{
 
-    .slider__left{
-        // height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 832px;
-        width: 100px;
-        cursor: pointer;
-        .arrow-left{
-            position: absolute;
-            top: 0;
-            left: 0;
-            margin: auto 0;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-        }
-        .icon-photo-count{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            font-size: $fz24;
-            width: 100px;
-            color: #424242;
-            // text-align: center;
+}
 
-            &:hover{
-                cursor: auto;
-            }
-        }
+.image-slider__image{
+    text-align: center;
+}
 
-    }
+.image-slider__image img{
+    max-width: 100%;
+    max-height: 832px;
+}
+
+.image-slider .swiper-button-prev::after,
+.image-slider .swiper-button-next::after{
+    color: #fff;
+    font-size: 50px;
+    text-shadow: 2px -2px 10px #000;
+    font-weight: 900;
+}
+
+.image-slider .swiper-pagination-fraction{
+    font-size: 24px;
+    color: #252525;
+    text-align: start;
+}
 
 
-    .slider__right{
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 832px;
-        width: 100px;
-        // transition: all .2s ease;
-        cursor: pointer;        
-        .arrow-right{
-            position: absolute;
-            top: 0;
-            right: 0;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            
-            // position: absolute;
-            // top: 50%;
+
+
+
+
+
+// .slider{
+//     position: relative;
+//     overflow: hidden;
     
-        }
 
-        .icon-resize{
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            svg{
-                height: 30px;
-                cursor: pointer;
-                // stroke: #f51919;
-                polygon{
-                    fill: #5f5f5f;
-                    stroke-width:4px;
-                    // stroke-linejoin: round;
+
+//     .slider__left{
+//         // height: 100%;
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         height: 832px;
+//         width: 100px;
+//         cursor: pointer;
+//         .arrow-left{
+//             position: absolute;
+//             top: 0;
+//             left: 0;
+//             margin: auto 0;
+//             height: 100%;
+//             width: 100%;
+//             display: flex;
+//             align-items: center;
+//             justify-content: flex-start;
+//         }
+//         .icon-photo-count{
+//             position: absolute;
+//             bottom: 0;
+//             left: 0;
+//             font-size: $fz24;
+//             width: 100px;
+//             color: #424242;
+//             // text-align: center;
+
+//             &:hover{
+//                 cursor: auto;
+//             }
+//         }
+
+//     }
+
+
+//     .slider__right{
+//         position: absolute;
+//         top: 0;
+//         right: 0;
+//         height: 832px;
+//         width: 100px;
+//         // transition: all .2s ease;
+//         cursor: pointer;        
+//         .arrow-right{
+//             position: absolute;
+//             top: 0;
+//             right: 0;
+//             height: 100%;
+//             width: 100%;
+//             display: flex;
+//             align-items: center;
+//             justify-content: flex-end;
+            
+//             // position: absolute;
+//             // top: 50%;
+    
+//         }
+
+//         .icon-resize{
+//             position: absolute;
+//             bottom: 0;
+//             right: 0;
+//             svg{
+//                 height: 30px;
+//                 cursor: pointer;
+//                 // stroke: #f51919;
+//                 polygon{
+//                     fill: #5f5f5f;
+//                     stroke-width:4px;
+//                     // stroke-linejoin: round;
                     
 
-                }
+//                 }
 
-            }
-            svg:hover polygon{
-                fill: #000;
+//             }
+//             svg:hover polygon{
+//                 fill: #000;
                 
-            }
-        }
+//             }
+//         }
         
 
-    }
+//     }
       
        
  
-    svg{
-        fill: white;
-        height: 70px;
-        width: 70px;
-        // width: 100%;
+//     svg{
+//         fill: white;
+//         height: 70px;
+//         width: 70px;
+//         // width: 100%;
         
-        filter: drop-shadow(3px 5px 3px rgb(0 0 0 / 0.2));
-        // filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
-        path{
-            height: 100%;
-        }
-    }
-}
+//         filter: drop-shadow(3px 5px 3px rgb(0 0 0 / 0.2));
+//         // filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+//         path{
+//             height: 100%;
+//         }
+//     }
+// }
 
 
 
