--- a/each-projects-page/nszu/nszu-style.scss
+++ b/each-projects-page/nszu/nszu-style.scss
@@ -69,6 +69,7 @@
     max-width: 100%;
     // max-height: 832px;
     max-height: calc(100vh - 112px);
+    min-height: 100%;
     padding-bottom: 10px;
 }
 
@@ -84,7 +85,52 @@
     font-size: 24px;
     color: #252525;
     text-align: start;
+    width: fit-content;
+    background-color: $bg-color;
 }
+
+
+.icon-resize{
+    position: absolute;
+    bottom: 10px;
+    right: 1px;
+    z-index: 10;
+    background-color: $bg-color;
+    padding: 2px;
+    svg{
+        height: 28px;
+        cursor: pointer;
+        // stroke: #f51919;
+        stroke-width: 8px;
+        polygon{
+            fill: #383838;
+            // stroke-linejoin: round;
+            
+
+        }
+
+    }
+    svg:hover polygon{
+        fill: #000;
+        
+    }
+}
+
+
+
+.photo-text{
+    display: flex;
+    text-align: left;
+    .photo-text-left{
+        width: 85%;
+    }
+    .photo-text-right{
+        width: 25%;
+    }
+}
+
+
+
 
 
 
