--- a/each-projects-page/nszu/nszu-style.css
+++ b/each-projects-page/nszu/nszu-style.css
@@ -1,3 +1,11 @@
+::-webkit-scrollbar {
+  width: 0;
+}
+
+body {
+  overflow: hidden;
+}
+
 .section-wrapper {
   padding: 0;
 }
@@ -12,6 +20,7 @@
 
 .image-slider__image {
   text-align: center;
+  height: 100%;
 }
 
 .image-slider__image img {
