--- a/each-projects-page/nszu/nszu-style.css
+++ b/each-projects-page/nszu/nszu-style.css
@@ -34,7 +34,7 @@ body {
 .image-slider .swiper-button-next::after {
   color: #fff;
   font-size: 50px;
-  text-shadow: 2px -2px 10px #000;
+  text-shadow: 1px -1px 10px rgba(0, 0, 0, 0.3);
   font-weight: 900;
 }
 
@@ -46,26 +46,6 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   background-color: #F2F2F2;
-}
-
-.icon-resize {
-  position: absolute;
-  bottom: 10px;
-  right: 1px;
-  z-index: 10;
-  background-color: #F2F2F2;
-  padding: 2px;
-}
-.icon-resize svg {
-  height: 28px;
-  cursor: pointer;
-  stroke-width: 8px;
-}
-.icon-resize svg polygon {
-  fill: #383838;
-}
-.icon-resize svg:hover polygon {
-  fill: #000;
 }
 
 .photo-text {
