--- a/each-projects-page/nszu/nszu-style.scss
+++ b/each-projects-page/nszu/nszu-style.scss
@@ -82,7 +82,7 @@ body {overflow: hidden;}
 .image-slider .swiper-button-next::after{
     color: #fff;
     font-size: 50px;
-    text-shadow: 2px -2px 10px #000;
+    text-shadow: 1px -1px 10px rgb(0, 0, 0, .3);
     font-weight: 900;
 }
 
@@ -95,31 +95,31 @@ body {overflow: hidden;}
 }
 
 
-.icon-resize{
-    position: absolute;
-    bottom: 10px;
-    right: 1px;
-    z-index: 10;
-    background-color: $bg-color;
-    padding: 2px;
-    svg{
-        height: 28px;
-        cursor: pointer;
-        // stroke: #f51919;
-        stroke-width: 8px;
-        polygon{
-            fill: #383838;
-            // stroke-linejoin: round;
+// .icon-resize{
+//     position: absolute;
+//     bottom: 10px;
+//     right: 1px;
+//     z-index: 10;
+//     background-color: $bg-color;
+//     padding: 2px;
+//     svg{
+//         height: 28px;
+//         cursor: pointer;
+//         // stroke: #f51919;
+//         stroke-width: 8px;
+//         polygon{
+//             fill: #383838;
+//             // stroke-linejoin: round;
             
 
-        }
+//         }
 
-    }
-    svg:hover polygon{
-        fill: #000;
+//     }
+//     svg:hover polygon{
+//         fill: #000;
         
-    }
-}
+//     }
+// }
 
 
 
