--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -1,19 +1,24 @@
-@media (max-width: 481px) {
-    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden481{
-        display: none;
-    } */
-    
-    .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
-        width: 100%;
-    }
+@media (orientation: landscape) and (max-height: 430px) {
 
     
-    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
-        grid-template-columns: repeat(1, 1fr) !important;
-    }*/
+    
+    .page__main .page__content .page__container .page__title .title-container .title-gif{
+        top: 0;
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+    }
+    .page__main .page__content .page__container .page__title .title-container .title-text{
+        top: 0;
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+    }
 
      
 }
+
+
+
+
 
 
 
@@ -213,25 +218,41 @@
 
 
 
-
-
-
-
-
-
-
-
-
 }
+
 @media (max-width: 730px) {
     /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden-992-1199{
         display: none;
     } */
+    .page__main .page__content .page__container .page__title{
+        height: 600px;
+    }
 
     .filter__navigation .filter__navigation-list{
         grid-template-columns: repeat(2, 1fr);
         
     }
+}
+
+@media (max-width: 481px) {
+    /* .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden481{
+        display: none;
+    } */
+    
+    .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
+        width: 100%;
+    }
+
+    .page__main .page__content .page__container .page__title {
+        height: 400px;
+    }
+
+    
+    /* .page__main .page__content .page__container .page__projects .section-wrapper .project__wrapper{
+        grid-template-columns: repeat(1, 1fr) !important;
+    }*/
+
+     
 }
 
 @media (max-width: 575px) {
