Add smooth animation in main page screen instead of gif

--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -2,7 +2,7 @@
 
     
     
-    .page__main .page__content .page__container .page__title .title-container .title-gif{
+    .page__main .page__content .page__container .page__title .title-container .title-anim{
         top: 0;
         -ms-transform: translateY(0);
         transform: translateY(0);
