--- a/assets/style/preloader.css
+++ b/assets/style/preloader.css
@@ -2,7 +2,8 @@
     position:fixed;
     top:0;
     z-index:100;
-    background: #333333;
+    background: #F2F2F2;
+    /* background: #333333; */
     display:flex;
     min-height:100vh;
     width:100%;
