--- a/assets/style/preloader.css
+++ b/assets/style/preloader.css
@@ -80,24 +80,25 @@
  
 
 #preloader__content{
-    min-height:100%;
+    position: fixed;
+    top: 0;
+    z-index: 75;
+    min-height:100vh;
     width:100%;
     display:flex;
     align-items:center;
     justify-content:center;
     background: #F2F2F2;
-    background-size: cover;
-    animation: zoom-in 4s;
+    /* background-size: cover; */
     /* animation: zoom-in 6s, 4s hide 4s; */
-    background-position:center;
-    background-repeat:no-repeat;
+    /* background-position:center; */
+    /* background-repeat:no-repeat; */
+    animation: zoom-in 4s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
     transform:scale(0.8);
-    position: absolute;
-    z-index: 75;
 }
- 
+
 @keyframes zoom-in{
     100%{
        transform:scale(1.2);
